Fix image stretching

--- a/themes/docsy/assets/scss/_custom.scss
+++ b/themes/docsy/assets/scss/_custom.scss
@@ -913,6 +913,11 @@ body.tv-episode {
   transform: scale(1);
   transition: transform .25s;
   
+  @media(min-width: 1160px) {
+    img {
+      height: 200px;
+    }
+  }
   @media (min-width: 992px) {
     flex: 0 0 31.5%;
     &:hover {
@@ -925,9 +930,6 @@ body.tv-episode {
       .thumbnail-gradient {
         opacity: 0;
       }
-    }
-    img {
-      height: 200px;
     }
   }
   img {
